--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -409,9 +409,10 @@
         "fromagebleu": "Moyenne des facteurs d’émission des différents fromages à pâte persillées : Roquefort, bleu d’Auvergne, gorgonzola etc.",
         "riz": "Moyenne des facteurs d’émission des différents riz : Riz blanc, complet, rouge; sauvage",
         "ble": "Moyenne des facteurs d’émission des différents blés : Blé dur entier, blé précuit, semoule de blé, blé tendre",
-        "hotel": "Sont inclus les émissions liées à la consommation d’énergie (chauffage, électricité, climatisation, eau chaude), aux services hôteliers (nettoyage, blanchisserie), aux infrastructures (construction, maintenance) et à la restauration (approvisionnement, préparation, déchets).",
-        "camping": "Sont inclus la construction et la consommation énergétique des infrastructures (les douches, sanitaires et l’éclairage). Il n’y a ni services hôteliers ni restauration.",
-        "location": "Sont inclus les émissions liées à la consommation énergétique (chauffage, électricité, eau chaude), aux infrastructures (construction et entretien). Les locations ne fournissent ni services hôteliers ni restauration."
+        "hotel": "Sont inclus les émissions liées à la consommation d’énergie (chauffage, électricité, climatisation, eau chaude), aux services d’entretien (nettoyage, blanchisserie), aux infrastructures (construction, maintenance), au déplacement domicile-travail du personnel.",
+        "camping": "Sont inclus la construction et la consommation énergétique des infrastructures (les douches, sanitaires et l’éclairage).",
+        "location": "Sont inclus les émissions liées à la consommation énergétique (chauffage, électricité, eau chaude), aux infrastructures (construction) et au services d’entretien.",
+        "residencesecondaire": "Sont inclus les émissions liées à la consommation énergétique (chauffage, électricité, eau chaude), aux infrastructures (construction) et services d’entretien. "
       },
       "post": {
         "ski": "Inclus : l’impact carbone du transport (52%), du logement (4%), de l’alimentation (8%), du domaine skiable (3%), des infrastructures, équipements et services du domaine (17%), et de l’équipement (16%).",
@@ -474,7 +475,11 @@
       "40": "Construction des terminaux",
       "41": "Usage des terminaux",
       "42": "Transmission",
-      "43": "Data-centers"
+      "43": "Data-centers",
+      "50": "Consommation d'énergie",
+      "51": "Services d'entretien",
+      "52": "Déplacement du personnel",
+      "53": "Construction des infrastructures"
     }
   },
   "category": {
