--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -412,7 +412,8 @@
         "hotel": "Sont inclus les émissions liées à la consommation d’énergie (chauffage, électricité, climatisation, eau chaude), aux services d’entretien (nettoyage, blanchisserie), aux infrastructures (construction, maintenance), au déplacement domicile-travail du personnel.",
         "camping": "Sont inclus la construction et la consommation énergétique des infrastructures (les douches, sanitaires et l’éclairage).",
         "location": "Sont inclus les émissions liées à la consommation énergétique (chauffage, électricité, eau chaude), aux infrastructures (construction) et au services d’entretien.",
-        "residencesecondaire": "Sont inclus les émissions liées à la consommation énergétique (chauffage, électricité, eau chaude), aux infrastructures (construction) et services d’entretien. "
+        "residencesecondaire": "Sont inclus les émissions liées à la consommation énergétique (chauffage, électricité, eau chaude), aux infrastructures (construction) et services d’entretien.",
+        "2050": "Un Français émet en moyenne près de 9,3 tonnes de CO2 par an. Pour limiter le dérèglement climatique, il est essentiel de réduire ces émissions et d'atteindre un objectif maximum de 2 tonnes de CO2e par personne par an d'ici 2050."
       },
       "post": {
         "ski": "Inclus : l’impact carbone du transport (52%), du logement (4%), de l’alimentation (8%), du domaine skiable (3%), des infrastructures, équipements et services du domaine (17%), et de l’équipement (16%).",
