--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -415,7 +415,8 @@
         "camping": "Includes the construction and energy consumption of infrastructure (showers, sanitary facilities, and lighting).",
         "location": "Includes emissions related to energy consumption (heating, electricity, hot water), infrastructure (construction), and maintenance services.",
         "residencesecondaire": "Includes emissions related to energy consumption (heating, electricity, hot water), infrastructure (construction), and maintenance services.",
-        "2050": "The average French person emits nearly 9.3 tonnes of CO2 per year. To limit climate change, it is essential to reduce these emissions and achieve a maximum target of 2 tonnes of CO2e per person per year by 2050."
+        "2050": "The average French person emits nearly 9.3 tonnes of CO2 per year. To limit climate change, it is essential to reduce these emissions and achieve a maximum target of 2 tonnes of CO2e per person per year by 2050.",
+        "chatgpt": "The power consumption of a simple query on the classic ChatGPT model is estimated at around 10Wh (high uncertainty rate), reported on the average electricity mix in the United States. This data is an estimate based on macro usage signals. It is neither a precise measurement nor a definitive value, due to the lack of transparency of the model designers."
       },
       "post": {
         "ski": "Includes: the carbon impact of transportation (52%), accommodation (4%), food (8%), ski area (3%), infrastructure, equipment, and services (17%), and gear (16%).",
@@ -475,6 +476,7 @@
       "15": "Transmission",
       "16": "Data-center construction",
       "17": "Data-center usage",
+      "18": "Network construction",
       "40": "Terminal construction",
       "41": "Terminal usage",
       "42": "Transmission",
@@ -512,7 +514,8 @@
     "intégrale": "complete show",
     "param": "with the parameters given below",
     "email": "email",
-    "recherche": "search"
+    "recherche": "search",
+    "requete": "request"
   },
   "ressources": {
     "fast-fashion": "Understand everything: the impacts of fashion and fast fashion",
