fix: wording on clothes livraison

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -302,7 +302,7 @@
     "chaussure": "Pair of shoes",
     "livre": "Books",
     "microondes": "Microwave",
-    "vetements": "Ordering clothes",
+    "vetements": "Clothes",
     "lavelinge": "Washing machine",
     "lit": "Complete bed",
     "smartphone": "Smartphone",
