--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -302,7 +302,7 @@
     "chaussure": "Par de zapatos",
     "livre": "Libros",
     "microondes": "Microondas",
-    "vetements": "Pedir ropa",
+    "vetements": "Ropa",
     "lavelinge": "Lavadora",
     "lit": "Cama completa",
     "smartphone": "teléfono inteligente",
