--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -302,7 +302,7 @@
     "chaussure": "Paire de chaussures",
     "livre": "Livres",
     "microondes": "Micro-ondes",
-    "vetements": "Commande de vêtements",
+    "vetements": "Vêtements",
     "lavelinge": "Lave-linge",
     "lit": "Lit complet",
     "smartphone": "Smartphone",
