fix: typo on espresso

--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -307,7 +307,7 @@
     "lit": "Lit complet",
     "smartphone": "Smartphone",
     "vin": "Caisse de vin",
-    "cafetiere": "Cafetière espresso",
+    "cafetiere": "Cafetière expresso",
     "fabrication": "Inclure l’impact de la fabrication de l’objet",
     "car": "J'y vais en voiture",
     "foot": "J'y vais à pied",
