feat: redirect to specific kit if available

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -76,9 +76,13 @@
     "kitTitle": "Communication kit",
     "kitDescription": "Everything you need to communicate on Impact CO₂",
     "kitLink": "Consult",
+    "alimentationKitTitle": "Communication kit for Impact Alimentation",
+    "alimentationKitDescription": "We have prepared ready-to-use visuals to help you easily communicate about Impact Alimentation.",
+    "quizKitTitle": "Communication kit for the Carbon Quiz",
+    "quizKitDescription": "To make your task easier, we have created ready-to-use visuals to communicate about the Carbon Quiz.",
     "livraisonKitTitle": "Comm’ kit for Impact Livraison",
     "livraisonKitDescription": "To make things easier for you, we have put together ready-to-use visuals to communicate about Impact Livraison",
-    "livraisonKitLink": "Download",
+    "extraKitLink": "Download",
     "integrate": "Integrate",
     "preview": "Preview the integration",
     "next-actions": "Explore further",
