--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -77,9 +77,13 @@
     "kitTitle": "Kit de comunicación",
     "kitDescription": "Todo lo que necesitas para comunicar sobre el impacto del CO₂",
     "kitLink": "Consultar",
+    "alimentationKitTitle": "Kit de comunicación para Impacto Alimentación",
+    "alimentationKitDescription": "Hemos preparado imágenes listas para usar para permitirle comunicar fácilmente sobre Impacto Alimentación.",
+    "quizKitTitle": "Kit de comunicación para el Quiz de carbono",
+    "quizKitDescription": "Para facilitarle la tarea, hemos creado imágenes listas para usar para comunicar sobre el Quiz de carbono.",
     "livraisonKitTitle": "Kit de comunicación para entrega de impacto",
     "livraisonKitDescription": "Para facilitarle las cosas, hemos elaborado imágenes listas para usar para comunicar sobre Impact Livraison",
-    "livraisonKitLink": "Descargar",
+    "extraKitLink": "Descargar",
     "preview": "Vista previa de la integración",
     "next-actions": "Siguientes acciones",
     "comparison": "Cambiar el modo de transporte comparar",
