--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -76,9 +76,13 @@
     "kitTitle": "Kit de communication",
     "kitDescription": "Tout ce qu’il faut pour communiquer sur Impact CO₂",
     "kitLink": "Consulter",
+    "alimentationKitTitle": "Kit de com’ pour Impact Alimentation",
+    "alimentationKitDescription": "Nous avons préparé des visuels prêts à l’emploi pour vous permettre de communiquer facilement sur Impact Alimentation.",
+    "quizKitTitle": "Kit de com’ pour le Quiz carbone",
+    "quizKitDescription": "Afin de vous faciliter la tâche, nous avons concocté des visuels prêts à l’emploi pour communiquer autour du Quiz carbone.",
     "livraisonKitTitle": "Kit de com’ pour Impact Livraison",
-    "livraisonKitDescription": "Afin de vous faciliter la tâche, nous avons concocté des visuels prêts à l’emploi pour communiquer autour d’Impact Livraison",
-    "livraisonKitLink": "Télécharger",
+    "livraisonKitDescription": "Afin de vous faciliter la tâche, nous avons concocté des visuels prêts à l’emploi pour communiquer autour d’Impact Livraison.",
+    "extraKitLink": "Télécharger",
     "integrate": "Intégrer",
     "preview": "Aperçu de l'integration",
     "next-actions": "Aller plus loin",
