feat: add new resources

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -555,13 +555,25 @@
     "tri": "Sort through your cupboards to make more space at home",
     "questions": "Ask yourself the right questions before buying: Do I really need it?",
     "deuxieme-vie": "Give a second life to unused clothes and shoes",
-    "pompe-chaleur": "Equip yourself with a heat pump",
     "chauffage-bois": "Adopt wood heating",
     "wattris": "Simulate the electrical consumption of your home",
     "ngc": "Estimate your consumption carbon footprint",
     "lvao": "Extend the life of your objects",
     "agir-tt": "What does telecommuting change for the planet?",
     "agir-alimentation": "Understand everything: a more sustainable diet",
+    "agir-livraison": "Learn to consume differently",
+    "epargnonsnosressources": "Assess your real need before buying",
+    "gagner-place": "Make more space at home?",
+    "deplacements": "Learn to travel differently",
+    "vacances": "Learn about more responsible vacations",
+    "alimentation-responsable": "Learn about more responsible food choices",
+    "chauffage": "Learn to heat your home differently",
+    "hiver": "How to stay warm in winter?",
+    "gestes": "Learn about everyday eco-friendly actions",
+    "mode": "Learn about responsible fashion",
+    "numerique-responsable": "Learn about responsible digital practices",
+    "sobriete": "How to adopt digital sobriety?",
+    "habitation": "Learn about responsible housing",
     "calendar": "Seasonal fruits and vegetables calendar",
     "leger": "How to work with a low impact ?",
     "ecoresponsable": "Eco-responsible at work",
