--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -555,13 +555,25 @@
     "tri": "Ordenar tus armarios para ganar espacio en casa",
     "questions": "Hacerse las preguntas correctas antes de comprar: ¿realmente lo necesito?",
     "deuxieme-vie": "Dar una segunda vida a la ropa y zapatos no utilizados",
-    "pompe-chaleur": "Equiparse con una bomba de calor",
     "chauffage-bois": "Adoptar calefacción de madera",
     "wattris": "Simular el consumo eléctrico de tu hogar",
     "ngc": "Estimar tu huella de carbono de consumo",
     "lvao": "Alarga la vida de tus objetos",
     "agir-tt": "¿El teletrabajo, qué cambia para el planeta?",
     "agir-alimentation": "Entendiéndolo todo: una dieta más sostenible",
+    "agir-livraison": "Infórmate para consumir de otra manera",
+    "epargnonsnosressources": "Evalúa tu necesidad real antes de comprar",
+    "gagner-place": "¿Ganar espacio en casa?",
+    "deplacements": "Infórmate para desplazarte de otra manera",
+    "vacances": "Infórmate para unas vacaciones más responsables",
+    "alimentation-responsable": "Infórmate para una alimentación más responsable",
+    "chauffage": "Infórmate para calentar tu hogar de otra manera",
+    "hiver": "¿Cómo pasar un invierno cálido?",
+    "gestes": "Infórmate sobre los gestos cotidianos",
+    "mode": "Infórmate sobre la moda responsable",
+    "numerique-responsable": "Infórmate sobre el uso responsable del mundo digital",
+    "sobriete": "¿Cómo adoptar la sobriedad digital?",
+    "habitation": "Infórmate sobre la vivienda responsable",
     "calendar": "Calendario de frutas y verduras de temporada",
     "leger": "¿Cómo trabajar con bajo impacto?",
     "ecoresponsable": "Eco-responsabilidad en el trabajo",
