--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -555,13 +555,25 @@
     "tri": "Faire le tri dans ses placards pour gagner de la place chez soi",
     "questions": "Se poser les bonnes questions avant d’acheter : en ai-je vraiment besoin ?",
     "deuxieme-vie": "Donner une seconde vie aux vêtements et chaussures non utilisées",
-    "pompe-chaleur": "S’équiper d’une pompe à chaleur",
     "chauffage-bois": "Adopter le chauffage au bois",
     "wattris": "Simuler la consommation électrique de son logement",
     "ngc": "Estimer son empreinte carbone de consommation",
     "lvao": "Prolonger la vie de ses objets",
     "agir-tt": "Le télétravail, ça change quoi pour la planète ?",
     "agir-alimentation": "Tout comprendre : une alimentation plus durable",
+    "agir-livraison": "S’informer pour consommer autrement",
+    "epargnonsnosressources": "Évaluer votre besoin réel avant d’acheter",
+    "gagner-place": "Gagner de la place chez soi ?",
+    "deplacements": "S’informer pour se déplacer autrement",
+    "vacances": "S’informer pour des vacances plus responsables",
+    "alimentation-responsable": "S’informer pour une alimentation plus responsable",
+    "chauffage": "S’informer pour se chauffer autrement",
+    "hiver": "Comment passer un hiver au chaud ?",
+    "gestes": "S’informer sur les gestes du quotidien",
+    "mode": "S’informer sur la mode responsable",
+    "numerique-responsable": "S’informer sur le numérique responsable",
+    "sobriete": "Comment adopter la sobriété numérique ?",
+    "habitation": "S’informer pour une habitation plus responsable",
     "calendar": "Calendrier des fruits et légumes de saison",
     "leger": "Comment télétravailler léger ?",
     "ecoresponsable": "Écoresponsable au bureau",
