fix: wording on point de relais

--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -322,7 +322,7 @@
     "etiquette": "Quel est <important>l'impact carbone</important> des différents modes d'achat ?",
     "magasin": "Achat en magasin",
     "livraisondomicile": "Livraison à domicile",
-    "pointrelais": "Livraison en point relais",
+    "pointrelais": "Livraison en point de retrait",
     "clickcollect": "Click & Collect",
     "extranames": {
       "clickcollect": " à 15km",
